add pylint to gitignore

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 kattis_username = ""
 kattis_password = ""
 codeforces_username = ""
-leetcode_username=""
-leetcode_password=""
+leetcode_username = ""
+leetcode_password = ""
+leetcode_recaptcha_token = ""
